# SellBulk

./: .env.example  .gitignore  CHANGELOG.md  COMPLETE_REPORT.md  CONTRIBUTING.md  FINAL_REPORT.md  INTEGRATION_GUIDE.md  PRD SELLIFY BACKEND TAURI.txt  README.md  SESSION2_SUMMARY.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SESSION5_SUMMARY.md  SESSION6_SUMMARY.md  SESSION_SUMMARY.md  TODO.md  docker-compose.yml
.github/workflows/: release.yml  test.yml
sellify-backend/: package-lock.json  package.json
sellify-backend/src-tauri/: Cargo.toml  tauri.conf.json
sellify-backend/src-tauri/src/: lib.rs
sellify-backend/src-tauri/src/api/: mod.rs
sellify-backend/src-tauri/src/engines/: alert.rs  anti_hallucination.rs  audit.rs  config.rs  conversation.rs  ia_gateway.rs  knowledge_base.rs  quota.rs  storage.rs
sellify-backend/src-tauri/src/models/: mod.rs
sellify-backend/src-tauri/src/utils/: mod.rs
sellify-backend/test-standalone/: Cargo.toml
sellify-backend/test-standalone/src/: lib.rs
sellify-core/: API.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
sellify-core/src/: lib.rs
sellify-core/src/api/: auth.rs  handlers.rs  metrics.rs  mod.rs  rate_limit.rs  routes.rs  scheduler.rs  server.rs
sellify-core/src/engines/: alert.rs  anti_hallucination.rs  audit.rs  conversation.rs  decision.rs  ia_gateway.rs  knowledge_base.rs  license.rs  mod.rs  quota.rs  storage.rs
