[package]
name = "sellify-core"
version = "0.1.0"
edition = "2021"
authors = ["Sellify Team"]
description = "Sellify - Deterministic WhatsApp Sales Automation Core Engine"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - SQLite
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# HTTP client for IA Gateway
reqwest = { version = "0.12", features = ["json"] }

# HWID generation
machine-uid = "0.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regex for text validation
regex = "1.0"

# HTTP Server (optional, for API)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Cron scheduler for quota resets
tokio-cron-scheduler = { version = "0.10", optional = true }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
default = []
http-server = ["axum", "tower", "tower-http", "tokio-cron-scheduler", "prometheus", "lazy_static"]
