[package]
name = "sellify-backend"
version = "1.0.0"
description = "Sellify - Deterministic WhatsApp Sales Automation Backend"
authors = ["Sellify Team"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3" }

[dependencies]
# Tauri core
tauri = { version = "2.9.5" }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - SQLite
rusqlite = { version = "0.32", features = ["bundled", "backup", "hooks"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Cryptography for encrypted storage
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# HTTP client for IA Gateway
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HWID generation
machine-uid = "0.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
toml = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
